# Llama.cpp-Plugins

./: .gitignore  LICENSE  PLUGIN_PATCHER_DESIGN.md  README.md  plugins.env  start.bat  start.ps1
plugins/: README.md
plugins/_disabled/: turbo-quant-plugin.dll.bak
plugins/fp8-kv-plugin/: ARCHITECTURE.md  BUILD.md  FP8_PATCH_LOG.md  FP8_PATCH_PLAN.md  PATCHES.md  build_plugin.bat  fp8-kv-plugin.cpp
plugins/sage-attention-plugin/: README.md
plugins/smart-kv-plugin/: ARCHITECTURE.md  BUILD.md  PATCHES.md  README.md  SMART_KV_PLAN.md  bench_humaneval.py  benchmark_quality.py  build_plugin.bat  collect_training_data.py  learned-score.h  smart-kv-cache.c  smart-kv-cache.h  smart-tq-plugin.cpp  stress-test-smart-kv.c  test-smart-kv-cache.c  test_quality.py  train_learned_score.py
plugins/smart-kv-plugin/scripts/: bench_longcontext.py  benchmark_quality.py  benchmark_tq_quality.cpp  collect_training_data.py  humaneval_f16.jsonl  humaneval_f16_all.jsonl  humaneval_smart_all.jsonl  smart_kv_stats.json  test-tq-integration.cpp
plugins/turbo-quant-plugin/: CMakeLists.txt  INTEGRATION_PATCHES.md  MIXED_CACHE_PLAN.md  README.md  turbo_quant_plugin.cpp  turboquant.cpp  turboquant.h
plugins/turbo-quant-plugin/scripts/: debug_tq3.py
tools/: auto_patch.py  build_fp8_verify.bat  build_fp8_verify.sh  minimal_test.cpp  minimal_test2.cpp  probe.cpp  probe_module.cpp  wmma_fp8_verify.cpp
